--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sass": "^1.77.2"
   },
   "devDependencies": {
