--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "myrecipebooknextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "axios": "^1.7.2",
-    "next": "14.2.3",
-    "normalize.css": "^8.0.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "sass": "^1.77.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
-  }
+	"name": "myrecipebooknextjs",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest"
+	},
+	"dependencies": {
+		"axios": "^1.7.2",
+		"next": "14.2.3",
+		"normalize.css": "^8.0.1",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-icons": "^5.2.1",
+		"sass": "^1.77.2"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"typescript": "^5",
+		"@testing-library/jest-dom": "6.1.5",
+		"@testing-library/react": "14.1.2",
+		"@types/jest": "29.5.11",
+		"jest": "29.7.0",
+		"jest-environment-jsdom": "29.7.0"
+	}
 }
